deploy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: podtato-8
  namespace: eleve-8

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: podtato-head-entry
  namespace: eleve-8
  labels:
    app: podtato-head
spec:
  selector:
    matchLabels:
      component: podtato-head-entry
  template:
    metadata:
      labels:
        component: podtato-head-entry
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: server
        image: ghcr.io/podtato-head/entry:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 9000
---

apiVersion: v1
kind: Service
metadata:
  name: podtato-head-entry
  namespace: eleve-8
  labels:
    app: podtato-head
spec:
  selector:
    component: podtato-head-entry
  ports:
  - name: http
    port: 9000
    protocol: TCP
    targetPort: 9000
  #type: LoadBalancer
  type: ClusterIP
  # change to NodePort if no LoadBalancer controller is available
  # type: NodePort

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: podtato-head-hat
  namespace: eleve-8
  labels:
    app: podtato-head
spec:
  selector:
    matchLabels:
      component: podtato-head-hat
  template:
    metadata:
      labels:
        component: podtato-head-hat
    spec:
      terminationGracePeriodSeconds: 5
      containers:
        - name: server
          image:  ghcr.io/podtato-head/hat:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 9000
---

apiVersion: v1
kind: Service
metadata:
  name: podtato-head-hat
  namespace: eleve-8
  labels:
    app: podtato-head
spec:
  selector:
    component: podtato-head-hat
  ports:
    - name: http
      port: 9001
      protocol: TCP
      targetPort: 9000
  type: ClusterIP

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: podtato-head-left-leg
  namespace: eleve-8
  labels:
    app: podtato-head
spec:
  selector:
    matchLabels:
      component: podtato-head-left-leg
  template:
    metadata:
      labels:
        component: podtato-head-left-leg
    spec:
      terminationGracePeriodSeconds: 5
      containers:
        - name: server
          image:  ghcr.io/podtato-head/left-leg:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
---

apiVersion: v1
kind: Service
metadata:
  name: podtato-head-left-leg
  namespace: eleve-8
  labels:
    app: podtato-head
spec:
  selector:
    component: podtato-head-left-leg
  ports:
    - name: http
      port: 9002
      protocol: TCP
      targetPort: 9000
  type: ClusterIP

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: podtato-head-left-arm
  namespace: eleve-8
  labels:
    app: podtato-head
spec:
  selector:
    matchLabels:
      component: podtato-head-left-arm
  template:
    metadata:
      labels:
        component: podtato-head-left-arm
    spec:
      terminationGracePeriodSeconds: 5
      containers:
        - name: server
          image:  ghcr.io/podtato-head/left-arm:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 9000
---

apiVersion: v1
kind: Service
metadata:
  name: podtato-head-left-arm
  namespace: eleve-8
  labels:
    app: podtato-head
spec:
  selector:
    component: podtato-head-leftt-arm
  ports:
    - name: http
      port: 9003
      protocol: TCP
      targetPort: 9000
  type: ClusterIP

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: podtato-head-right-leg
  namespace: eleve-8
  labels:
    app: podtato-head
spec:
  selector:
    matchLabels:
      component: podtato-head-right-leg
  template:
    metadata:
      labels:
        component: podtato-head-right-leg
    spec:
      terminationGracePeriodSeconds: 5
      containers:
        - name: server
          image:  ghcr.io/podtato-head/right-leg:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 9000
---

apiVersion: v1
kind: Service
metadata:
  name: podtato-head-right-leg
  namespace: eleve-8
  labels:
    app: podtato-head
spec:
  selector:
    component: podtato-head-right-leg
  ports:
    - name: http
      port: 9004
      protocol: TCP
      targetPort: 9000
  type: ClusterIP

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: podtato-head-right-arm
  namespace: eleve-8
  labels:
    app: podtato-head
spec:
  selector:
    matchLabels:
      component: podtato-head-right-arm
  template:
    metadata:
      labels:
        component: podtato-head-right-arm
    spec:
      terminationGracePeriodSeconds: 5
      containers:
        - name: server
          image:  ghcr.io/podtato-head/right-arm:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 9000
---

apiVersion: v1
kind: Service
metadata:
  name: podtato-head-right-arm
  namespace: eleve-8
  labels:
    app: podtato-head
spec:
  selector:
    component: podtato-head-right-arm
  ports:
    - name: http
      port: 9005
      protocol: TCP
      targetPort: 9000
  type: ClusterIP
