ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: podtato-8
  namespace: kumba
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`podtato-8.savoye-poc-1.kumba.adista.fr`) && PathPrefix(`/`)
    kind: Rule
    services:
    - name: podtato-head-entry
      namespace: eleve-8
      scheme: http
      port: 9000
  tls:
    secretName: kumba-wildcard-certificate-secret
    domains:
      - main: "savoye-poc-1.kumba.adista.fr"
        sans:
          - "*.savoye-poc-1.kumba.adista.fr"
